@@ -16,6 +16,8 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.handler.HandlerMappingIntrospector;
 import java.util.Arrays;
+import java.util.List;
+
 import static org.springframework.security.config.Customizer.withDefaults;
 
 
@@ -27,7 +29,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("https://locahost:8080"));
+        configuration.setAllowedOrigins(List.of("http://localhost:8080"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -35,52 +37,57 @@ public class SecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http, HandlerMappingIntrospector introspector) throws Exception {
-        MvcRequestMatcher.Builder mvcMatcherBuilder = new MvcRequestMatcher.Builder(introspector);
-        http
-                .formLogin(formLogin -> formLogin.disable())
-                .httpBasic(httpBasic -> httpBasic.disable())
-                .csrf(csrf -> csrf.disable())
-                .cors(withDefaults())
-                .headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable()))
-                .addFilterBefore(new JwtAuthenticationFilter(jwtTokenProvider), UsernamePasswordAuthenticationFilter.class)
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(request -> request
-                        .requestMatchers(
-                                "/api/auth/logout",
-                                "/api/auth/reissue-token",
-                                "/api/user/on-boarding/motivation",
-                                "/api/user/on-boarding/level",
-                                "/api/user/on-boarding/complete",
-                                "/api/user",
-                                "/api/user/profile-image",
-                                "/api/user/profile",
-                                "/api/veggie-info",
-                                "/api/veggie-info/**",
-                                "api/my-veggie",
-                                "api/my-veggie/diary",
-                                "/api/my-veggie/simple-list",
-                                "/api/my-veggie/list"
-                        ).permitAll()
+    public WebSecurityCustomizer configure() {
+        return (web -> web.ignoring()
+// http://localhost:8080/swagger-ui/index.html
+                .requestMatchers(
+                        "/swagger-ui/**",
+                        "/v3/api-docs/**",
+                        "/swagger-resources/**",
+                        "/webjars/**"
                 )
-                .authorizeHttpRequests(request -> request.anyRequest().authenticated());
-
-        return http.build();
-
-
-    }
-    @Bean
-	public WebSecurityCustomizer configure() {
-		return (web -> web.ignoring()
-
-				.requestMatchers("/api/auth/kakao-login")
+                .requestMatchers("/api/auth/kakao-login")
                 .requestMatchers("/api/auth/google-login")
                 .requestMatchers("/api/my-veggie/routine")
-                .requestMatchers("/api/my-veggie/diary/{myVeggieId}/one")
                 .requestMatchers("/api/my-veggie/diary/check")
                 .requestMatchers("/api/my-veggie/{myVeggieId}/profile")
-		);
-	}
+        );
+    }
+
+
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http, HandlerMappingIntrospector introspector) throws Exception {
+        http
+            .formLogin(formLogin -> formLogin.disable())
+            .httpBasic(httpBasic -> httpBasic.disable())
+            .csrf(csrf -> csrf.disable())
+            .cors(withDefaults())
+            .headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable()))
+            .addFilterAfter(new JwtAuthenticationFilter(jwtTokenProvider), UsernamePasswordAuthenticationFilter.class)
+            .authorizeHttpRequests(request -> request
+                            .requestMatchers(
+                                    "/api/auth/logout",
+                                    "/api/auth/reissue-token",
+                                    "/api/user/on-boarding/motivation",
+                                    "/api/user/on-boarding/level",
+                                    "/api/user/on-boarding/complete",
+                                    "/api/user",
+                                    "/api/user/profile-image",
+                                    "/api/user/profile",
+                                    "/api/veggie-info",
+                                    "/api/veggie-info/**",
+                                    "api/my-veggie",
+                                  //  "api/my-veggie/diary",
+                                    "/api/my-veggie/simple-list",
+                                    "/api/my-veggie/list",
+                                    "/api/my-veggie/diary/{myVeggieId}/all",
+                                    "/api/my-veggie/diary/{myVeggieId}/one").permitAll()
+            )
+            .authorizeHttpRequests(request -> request.anyRequest().authenticated());
+        return http.build();
+    }
+
+
 
 
 }
